# pyvicar

./: LICENSE  README.md  pyproject.toml  setup.py
_datatype/: dataset.py  point.py
_file/: __init__.py  series.py  siblings.py
_tree/: __init__.py  field.py  group.py
_utilities/: optional.py
case/common/: case.py  drag_lift.py
case/fsi/: __init__.py  case.py  drag_lift.py  nonuniform_grid.py
examples/01_geometry/: 00_readme  01_sphere.py  02_cylinder_2d.py  03_plane.py  03_stl.py  04_npz_2d.py  04_plane_2d.py  05_stl.py  05_trisurf.py  06_curve_2d.py  06_npz_2d.py  07_csv_2d.py  08_stl_memb.py  09_npz_memb_2d.py  10_csv_memb_2d.py  11_trisurf.py  12_curve_2d.py
examples/02_motion/: 01_sph_sine.py
examples/02_postprocess/: 00_readme  01_draglift.py  02_isoq.py  02_isoq3d.py  03_slice_contour.py  04_compress.py
examples/03_postprocess/: 01_draglift.py  02_isoq.py  03_bodyanim.py  03_slicecontour.py  04_slicecontour.py  05_recorder.py  06_compress.py
examples/03_project/: 00_readme
examples/04_project/: README.md
file/: formatter.py  io.py  series.py
geometry/: stl_reader.py  trisurface.py
grid/: segment.py
pyvicar/_file/: __init__.py  io.py
pyvicar/_format/: formatter.py  kv1_formatter.py  tools.py
pyvicar/_tree/: __init__.py  field.py  group.py
pyvicar/geometry/: __init__.py  spanned_2dcurve.py  trisurface.py
pyvicar/tools/: collections.py  log.py  miscellaneous.py  mpi.py  srj.py  vtk.py
src/pyvicar/: __init__.py  addons_importer.py
tools/: mpi.py
tools/post/: __init__.py  line_calculus.py
tree/: field.py  group.py
(+341 files in other folders)
